apps/circuit-breaker-service/base/service-service1-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: service1-frontend
spec:
  selector:
    app: service1-frontend
  ports:
    - port: 8080
      targetPort: 8080
      name: http
