apps/circuit-breaker-service/base/service-service2-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: service2-backend
spec:
  selector:
    app: service2-backend
  ports:
    - port: 8080
      targetPort: 8080
      name: http
