apps/circuit-breaker-service/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: circuit-breaker-service
spec:
  selector:
    app: circuit-breaker-service
  ports:
    - port: 8080
      targetPort: 8080
