apps/circuit-breaker-service/base/circuit-breaker-service-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: circuit-breaker-service
spec:
  parentRefs:
    - name: shared-gateway
      namespace: platform-gateway
  hostnames:
    - cb-dev.apps.CHANGE_ME_DOMINIO
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: circuit-breaker-service
          port: 8080
